[package]
name = "retro-app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
askama = "0.12"
tower-http = { version = "0.5", features = ["fs"] }
chrono = { version = "0.4", features = ["serde"] }
hyper = { version = "1.0", features = ["full"] }
htmlescape = "0.3"

[dev-dependencies]
cargo-watch = "8.4"
fantoccini = "0.19"
tokio-test = "0.4"
serde_json = "1.0"
